# oracle-cloud-generative-ai

./: .gitignore  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
01-oci-generative-ai-professional/: README.md
01-oci-generative-ai-professional/02-fundamentals-llm/: QUESTIONS.MD  README.md
01-oci-generative-ai-professional/03-oci-genai/: QUESTIONS.md  README.md
01-oci-generative-ai-professional/03-oci-genai/code/notebooks/: gen_ai_inference_api.py  genai_embedding_models.py
01-oci-generative-ai-professional/03-oci-genai/code/scripts/: gen_ai_inference_api_script.py
01-oci-generative-ai-professional/04-oci-genai-rag/: QUESTIONS.md  README.md
01-oci-generative-ai-professional/04-oci-genai-rag/code/notebooks/: langchain_rag.py
01-oci-generative-ai-professional/04-oci-genai-rag/code/scripts/: oracle_db_embedding.py
01-oci-generative-ai-professional/05-oci-genai-agents/: README.md
02-practice-exam/: QUESTIONS.md
03-scraped-questions/: OCI_GENAI_QUESTIONS.docx
03-scraped-questions/data/: scraped_questions.csv  scraped_questions.json
commands/: marimo_export.sh
