[project]
name = "oracle-cloud-generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "marimo>=0.17.2",
    "oci>=2.162.0",
    "oracledb>=3.4.0",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
